# pyBagPlot

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tox-CI.yml
pybagplot/: BagPlot.py  __init__.py
