[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pybagplot"
version = "0.0.1"
description = ""
authors = ["James Lewellyn <lewellyn.james@gmail.com>"]
maintainers = ["James Lewellyn <lewellyn.james@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
